--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,12 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary1">#322F50</color>
+    <color name="primary2">#B1B8D8</color>
+    <color name="primary3">#EFDAC7</color>
+    <color name="primary4">#F0F0F2</color>
+    <color name="secondary1">#F9F9FC</color>
+    <color name="secondary2">#47455B</color>
+    <color name="secondary3">#095BFA</color>
+    <color name="secondary4">#D65C5C</color>
 </resources>
