--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -5,16 +5,57 @@
     android:layout_height="match_parent"
     tools:context=".Settings">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="120dp"
+        android:layout_marginHorizontal="16dp"
+        android:background="@drawable/rounded_background_gradient"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/iv_settings"
-            android:src="@drawable/baseline_settings_24"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:layout_centerInParent="true"/>
+            android:layout_centerInParent="true"
+            android:layout_marginVertical="10dp"
+            android:src="@drawable/baseline_settings_24" />
 
-    </RelativeLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="aaaa@gmail.com"
+            android:textColor="@color/primary1"
+            android:textAlignment="center"/>
+
+        <Button
+            android:id="@+id/saveTransactionButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_background_transparent"
+            android:text="Save Transaction List"
+            android:layout_marginVertical="10dp"
+            android:textColor="@color/primary1" />
+
+        <Button
+            android:id="@+id/sendTransactionButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_background_transparent"
+            android:text="Send Transaction List"
+            android:layout_marginVertical="10dp"
+            android:textColor="@color/primary1" />
+
+        <Button
+            android:id="@+id/logoutButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_launcher_foreground"
+            android:background="@drawable/rounded_background_transparent"
+            android:text="Logout"
+            android:layout_marginVertical="10dp"
+            android:textColor="@color/primary1" />
+
+    </LinearLayout>
 </FrameLayout>
