--- a/app/src/main/res/layout/activity_bondo_man_splash_screen.xml
+++ b/app/src/main/res/layout/activity_bondo_man_splash_screen.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BondoManSplashScreen">
 
+    android:background="@drawable/background_gradient_splashscreen"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    tools:context=".BondoManSplashScreen">
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:srcCompat="@drawable/splashscreen" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        app:srcCompat="@drawable/logo_bondoman" />
+</LinearLayout>
