--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -9,12 +9,51 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+<!--        <ImageView-->
+<!--            android:id="@+id/iv_scan"-->
+<!--            android:src="@drawable/baseline_document_scanner_24"-->
+<!--            android:layout_width="200dp"-->
+<!--            android:layout_height="200dp"-->
+<!--            android:layout_centerInParent="true"/>-->
+
         <ImageView
-            android:id="@+id/iv_scan"
-            android:src="@drawable/baseline_document_scanner_24"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_centerInParent="true"/>
+            android:id="@+id/captureImageView"
+            android:layout_width="350dp"
+            android:layout_height="450dp"
+            android:layout_centerInParent="true"
+            android:background="@drawable/iv_picture"
+            android:scaleType="centerCrop" />
+
+        <android.widget.Button
+            android:id="@+id/captureImgBtn"
+            android:layout_width="69dp"
+            android:layout_height="71dp"
+
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginVertical="33dp"
+            android:layout_marginEnd="168dp"
+            android:layout_marginBottom="35dp"
+            android:background="@drawable/rounded_button"
+            android:text="" />
+
+        <Button
+            android:id="@+id/pickImgBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginVertical="25dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="55dp"
+            android:layout_marginBottom="24dp"
+            android:layout_toStartOf="@+id/captureImgBtn"
+            android:background="@android:color/transparent"
+            android:drawableTop="@drawable/gallery"
+            android:drawablePadding="0dp"
+            android:text="Gallery"
+            android:textColor="@color/primary_color_1" />
+
 
     </RelativeLayout>
 </FrameLayout>
