--- a/app/src/main/res/layout/fragment_detail_transaction.xml
+++ b/app/src/main/res/layout/fragment_detail_transaction.xml
@@ -5,103 +5,117 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".AddTransactionActivity">
+    tools:context=".DetailTransaction">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_margin="16dp">
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:orientation="vertical">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Title"
-            android:textSize="16dp"
             android:layout_marginTop="16dp"
-            android:textColor="@color/primary_color_1"/>
+            android:text="Title"
+            android:textColor="@color/primary_color_1"
+            android:textSize="16sp" />
+
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <EditText
                 android:id="@+id/inputTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
-                android:padding="8dp"/>
+                android:padding="8dp" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="How Much?"
-            android:textSize="16dp"
             android:textColor="@color/primary_color_1"
-            android:layout_marginTop="16dp"/>
+            android:textSize="16sp" />
+
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <EditText
                 android:id="@+id/inputAmount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
-                android:textSize="36dp"
-                android:padding="8dp"/>
+                android:padding="8dp"
+                android:textSize="36sp" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Category"
-            android:textSize="16sp"
             android:layout_marginTop="16dp"
-            android:textColor="@color/primary_color_1"/>
+            android:text="Category"
+            android:textColor="@color/primary_color_1"
+            android:textSize="16sp" />
 
         <RadioGroup
             android:id="@+id/radioGroupCategory"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:orientation="horizontal">
+
             <RadioButton
                 android:id="@+id/radioIncome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="24dp"
                 android:text="Income"
-                android:textSize="24dp"
-                android:layout_marginRight="24px" />
+                android:textSize="24sp" />
+
             <RadioButton
                 android:id="@+id/radioExpense"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="24dp"
                 android:text="Expense"
-                android:textSize="24dp"
-                android:layout_marginLeft="24px"/>
+                android:textSize="24sp" />
         </RadioGroup>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="Location"
-            android:textSize="16dp"
             android:textColor="@color/primary_color_1"
-            android:layout_marginTop="16dp"/>
+            android:textSize="16sp" />
+
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <EditText
                 android:id="@+id/inputLocation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="8dp"/>
+                android:padding="8dp" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <Button
             android:id="@+id/buttonSave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Save"
-            android:backgroundTint="@color/primary_color_1"
-            android:textColor="@color/white"
-            android:layout_marginTop="48dp"
             android:layout_gravity="center_horizontal"
-            />
+            android:layout_marginTop="48dp"
+            android:backgroundTint="@color/primary_color_1"
+            android:text="Save"
+            android:textColor="@color/white" />
 
     </LinearLayout>
 </RelativeLayout>
