--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="8dp"
         android:layout_marginHorizontal="16dp"
         android:background="@drawable/rounded_background_gradient"
         android:gravity="center"
@@ -45,6 +45,14 @@
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_background_transparent"
             android:text="Send Transaction List"
+            android:layout_marginVertical="10dp"
+            android:textColor="@color/primary1" />
+        <Button
+            android:id="@+id/randomizeTransactionButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_background_transparent"
+            android:text="Randomize"
             android:layout_marginVertical="10dp"
             android:textColor="@color/primary1" />
 
