--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary_color_1">#322F50</color>
-    <color name="primary_color_2">#B1D1D8</color>
+    <color name="primary_color_2">#B1B8D8</color>
     <color name="primary_color_3">#EFDAC7</color>
     <color name="primary_color_4">#F0F0F2</color>
     <color name="secondary_color_2">#DDDFEB</color>
