--- a/app/src/main/res/layout-land/fragment_scan.xml
+++ b/app/src/main/res/layout-land/fragment_scan.xml
@@ -8,35 +8,25 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/captureImageView"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/iv_picture"
             android:scaleType="centerCrop"
-            android:layout_marginHorizontal="12dp"/>
+            android:layout_marginHorizontal="12dp"
+            android:layout_marginBottom="12dp"/>
 
         <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <Button
-                android:id="@+id/pickImgBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="20dp"
-                android:background="@android:color/transparent"
-                android:drawableTop="@drawable/gallery"
-                android:text="Gallery"
-                android:textColor="@color/primary_color_1" />
+            android:layout_width="120dp"
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="match_parent"
                 android:gravity="center">
 
                 <android.widget.Button
@@ -46,7 +36,18 @@
                     android:background="@drawable/rounded_button"
                     android:text="" />
 
-        </LinearLayout>
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/pickImgBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|bottom"
+                android:layout_marginBottom="12dp"
+                android:background="@android:color/transparent"
+                android:drawableTop="@drawable/gallery"
+                android:text="Gallery"
+                android:textColor="@color/primary_color_1" />
 
 
         </FrameLayout>
