--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -7,11 +7,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_height="match_parent"
         android:layout_marginHorizontal="16dp"
         android:background="@drawable/rounded_background_gradient"
-        android:gravity="center"
+        android:gravity="center_horizontal"
         android:orientation="vertical">
 
         <ImageView
@@ -19,11 +18,13 @@
             android:layout_width="180dp"
             android:layout_height="180dp"
             android:layout_centerInParent="true"
-            android:layout_marginVertical="10dp"
+            android:layout_marginTop="20dp"
             android:src="@drawable/profile_icon" />
 
         <TextView
             android:id="@+id/emailTextView"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginVertical="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="123@gmail.com"
@@ -32,6 +33,7 @@
 
         <Button
             android:id="@+id/saveTransactionButton"
+            android:layout_marginHorizontal="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_background_transparent"
@@ -41,6 +43,7 @@
 
         <Button
             android:id="@+id/sendTransactionButton"
+            android:layout_marginHorizontal="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_background_transparent"
@@ -50,6 +53,7 @@
 
         <Button
             android:id="@+id/logoutButton"
+            android:layout_marginHorizontal="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_launcher_foreground"
