--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="secondary2">#47455B</color>
     <color name="secondary3">#095BFA</color>
     <color name="secondary4">#D65C5C</color>
+    <color name="secondary5">#2DA039</color>
 </resources>
