--- a/app/src/main/res/layout-land/fragment_graphs.xml
+++ b/app/src/main/res/layout-land/fragment_graphs.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Graphs">
+    tools:context=".ui.graph.Graphs">
 
     <LinearLayout
         android:layout_width="match_parent"
