--- a/app/src/main/res/layout/activity_bondo_man_splash_screen.xml
+++ b/app/src/main/res/layout/activity_bondo_man_splash_screen.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/background_gradient_splashscreen"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".BondoManSplashScreen">
+    tools:context=".ui.splash_screen.BondoManSplashScreen">
 
     <ImageView
         android:id="@+id/imageView2"
