--- a/app/src/main/res/layout/fragment_detail_transaction.xml
+++ b/app/src/main/res/layout/fragment_detail_transaction.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".DetailTransaction">
+    tools:context=".ui.transaction.DetailTransaction">
 
     <LinearLayout
         android:layout_width="match_parent"
