--- a/app/src/main/res/layout/fragment_header_detail_transaction.xml
+++ b/app/src/main/res/layout/fragment_header_detail_transaction.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/primary_color_4"
-    tools:context=".HeaderDetailTransaction">
+    tools:context=".ui.transaction.HeaderDetailTransaction">
 
     <FrameLayout
         android:layout_width="match_parent"
