--- a/app/src/main/res/layout/fragment_network_error.xml
+++ b/app/src/main/res/layout/fragment_network_error.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NetworkError">
+    tools:context=".ui.network.NetworkError">
 
     <!-- TODO: Update blank fragment layout -->
     <ImageView
